[gd_scene load_steps=19 format=2]

[ext_resource path="res://Prototyping/Level.gd" type="Script" id=1]
[ext_resource path="res://Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/TreasureGold.tscn" type="PackedScene" id=3]
[ext_resource path="res://Logic/TopdownCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/PickUpBall.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/ButtonPlate.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/Door.tscn" type="PackedScene" id=8]
[ext_resource path="res://default_env.tres" type="Environment" id=9]
[ext_resource path="res://Objects/Cable.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objects/TreasureGears.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objects/Algae.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/EnergyCrystal.tscn" type="PackedScene" id=13]
[ext_resource path="res://Objects/BubbleSpawner.tscn" type="PackedScene" id=14]

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.713726, 0.717647, 0.576471, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.717647, 0.639216, 0.576471, 1 )

[node name="Level" type="Spatial"]
script = ExtResource( 1 )
player1_color = Color( 0.152941, 0.27451, 0.745098, 1 )
player2_color = Color( 0.843137, 0.215686, 0.215686, 1 )

[node name="Cable" parent="." instance=ExtResource( 10 )]

[node name="Player1" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.187758, 0 )

[node name="Handle" type="Spatial" parent="Player1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Player1/Handle"]
transform = Transform( 0.20187, 0, 0, 0, 0.20187, 0, 0, 0, 0.20187, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="Player2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.187758, 0 )

[node name="Handle" type="Spatial" parent="Player2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Player2/Handle"]
transform = Transform( 0.188611, 0, 0, 0, 0.188611, 0, 0, 0, 0.188611, 0, 0, 0 )
mesh = SubResource( 4 )

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="CSGLayout" type="Spatial" parent="."]

[node name="Ground" type="CSGBox" parent="CSGLayout"]
transform = Transform( 24.2766, 0, 0, 0, 1, 0, 0, 0, 24.2766, 0, -1.03167, 0 )
use_collision = true
material = SubResource( 1 )

[node name="Ground2" type="CSGBox" parent="CSGLayout"]
transform = Transform( 24.2766, 0, 0, 0, 1, 0, 0, 0, 24.2766, 0, -1.03167, -48.5524 )
use_collision = true
material = SubResource( 2 )

[node name="Wall" type="CSGBox" parent="CSGLayout"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.50517, -24.8507, 0.996017, 0 )
use_collision = true
depth = 32.2174

[node name="Wall2" type="CSGBox" parent="CSGLayout"]
transform = Transform( -4.37114e-08, 0, 1.50517, 0, 1, 0, -1, 0, -6.57929e-08, -0.348785, 0.996017, 23.689 )
use_collision = true
depth = 32.2174

[node name="Wall3" type="CSGBox" parent="CSGLayout"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.50517, 24.8266, 0.996017, 0.351385 )
use_collision = true
depth = 32.2174

[node name="Wall4" type="CSGBox" parent="CSGLayout"]
transform = Transform( -2.09736e-08, 0, -0.722208, 0, 1, 0, 1, 0, -6.57929e-08, -14.22, 0.996017, -24.7856 )
use_collision = true
depth = 32.2174

[node name="Wall5" type="CSGBox" parent="CSGLayout"]
transform = Transform( -2.09736e-08, 0, -0.722208, 0, 1, 0, 1, 0, -6.57929e-08, 14.0264, 0.996017, -24.7856 )
use_collision = true
depth = 32.2174

[node name="Objects" type="Spatial" parent="."]

[node name="ButtonPlate1" parent="Objects" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.76027, 0, -20.4439 )

[node name="ButtonPlate2" parent="Objects" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.96723, 0, -20.4439 )

[node name="Door" parent="Objects" instance=ExtResource( 8 )]

[node name="Algae" parent="Objects" instance=ExtResource( 12 )]
transform = Transform( 0.993471, 0, 0.114088, 0, 1, 0, -0.114088, 0, 0.993471, -4.9941, 0, -4.23189 )

[node name="Algae2" parent="Objects" instance=ExtResource( 12 )]
transform = Transform( 0.980727, 0, -0.195381, 0, 1, 0, 0.195381, 0, 0.980727, -3.79239, -9.53674e-07, -8.84642 )

[node name="Algae3" parent="Objects" instance=ExtResource( 12 )]
transform = Transform( 0.998978, 0, 0.0451886, 0, 1, 0, -0.0451886, 0, 0.998978, 6.31561, -1.90735e-06, -8.14274 )

[node name="Algae4" parent="Objects" instance=ExtResource( 12 )]
transform = Transform( 0.987879, 0, -0.155228, 0, 1, 0, 0.155228, 0, 0.987879, 10.071, 0, -4.78975 )

[node name="Algae5" parent="Objects" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.5367, 0, -7.77911 )

[node name="Algae6" parent="Objects" instance=ExtResource( 12 )]
transform = Transform( 0.999298, 0, -0.0374634, 0, 1, 0, 0.0374634, 0, 0.999298, 14.34, 0, -2.83039 )

[node name="EnergyCrystal" parent="Objects" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.36273, -9.53674e-07, -3.28875 )

[node name="PickUpBall" parent="Objects" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.3957, 0, -3.29741 )

[node name="BubbleSpawner" parent="Objects" instance=ExtResource( 14 )]
transform = Transform( 0.2366, 0, 0, 0, 0.2366, 0, 0, 0, 0.2366, 4.81804, 0, -9.14525 )

[node name="BubbleSpawner2" parent="Objects" instance=ExtResource( 14 )]
transform = Transform( 0.2366, 0, 0, 0, 0.2366, 0, 0, 0, 0.2366, 8.74047, 0, -2.90353 )

[node name="BubbleSpawner3" parent="Objects" instance=ExtResource( 14 )]
transform = Transform( 0.2366, 0, 0, 0, 0.2366, 0, 0, 0, 0.2366, -5.52819, 9.53674e-07, -6.5547 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 9 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0 )
__meta__ = {
"_editor_description_": "Tracks the controlled player on the ground"
}

[node name="TopdownCamera" parent="Pivot" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 10, 0 )
current = true

[node name="RopeLengthChecker" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Treasures" type="Node" parent="."]

[node name="TreasureGold" parent="Treasures" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.855672, 0, -8.46221 )

[node name="TreasureGears" parent="Treasures" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.02178, -4.76837e-07, -7.35904 )

[connection signal="player_entered" from="Objects/ButtonPlate1" to="Objects/Door" method="_on_ButtonPlate1_player_entered"]
[connection signal="player_left" from="Objects/ButtonPlate1" to="Objects/Door" method="_on_ButtonPlate1_player_left"]
[connection signal="player_entered" from="Objects/ButtonPlate2" to="Objects/Door" method="_on_ButtonPlate2_player_entered"]
[connection signal="player_left" from="Objects/ButtonPlate2" to="Objects/Door" method="_on_ButtonPlate2_player_left"]
[connection signal="timeout" from="RopeLengthChecker" to="." method="_on_RopeLengthChecker_timeout"]
